--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.0",
         "@types/node": "^16.11.33",
-        "@types/react": "^18.0.9",
+        "@types/react": "^18.0.12",
         "@types/react-dom": "^18.0.3",
         "axios": "^0.27.2",
         "chart.js": "^3.8.0",
@@ -63,6 +63,7 @@
     },
     "devDependencies": {
         "@iconify/react": "^3.2.1",
+        "@types/axios": "^0.14.0",
         "@types/uuid": "^8.3.4"
     }
 }
